# NES_DEV

./: .gitignore  CMakeLists.txt  LineOfCode.sh  NES_DEV.sln  NES_DEV.vcxproj  NES_DEV.vcxproj.filters  README.md  README.txt  clean.sh
Src/: CMakeLists.txt  config.h  main.c
Src/ARM/: delay.c  delay.h  usart.c  usart.h
Src/ARM/Graphics/: font.c  font.h  graphics.c  graphics.h
Src/ARM/Joystick/: joystick.c  joystick.h
Src/ARM/LCDDriver/: clean.bat  tft-ili9325.c  tft-ili9325.h
Src/NES/: apu.c  apu.h  config.h  cycles.c  cycles.h  debuger.c  debuger.h  emulator.c  emulator.h  io.c  io.h  joypad.c  joypad.h  nes-hdr.c  nes-hdr.h  p6502.c  p6502.h  palette.c  palette.h  ppu.c  ppu.h  state.c  state.h
Src/NES/Mappers/: bank-switch.c  bank-switch.h  mapper.c  mapper.h  mappers-name.c  mappers-name.h
Src/TUI/: console.c  console.h
TestROM/: attrib.asm  palette.asm  pattern.c  spr.asm  test-rom.c  test-rom.h  vect.c
TestROM/Asm/: attrib.asm  build.bat  build.sh  build_test_rom.bat  build_test_rom.sh  ca65-test.s  cc65-test.cfg  dlogo.asm  interrupt.asm  intr.asm  intro-rom.asm  macros.asm  palette.asm  pattern.c  pattern.h  ppu.asm  spr.asm  strings.asm  test-rom.asm  test-rom.c  test-rom.h  vect.c  vect.h
TestROM/Asm/Resources/: A.nam  ASCII.chr  DLogo.asm  delta.nam
TestROM/C/: ASCII.chr  CMakeLists.txt  Makefile  build.bat  cc65-test.cfg  main.c  nes.asm
TestROM/C/Hardware/: ppu-memory.h
TestROM/C/cc65/include/: nes.h  zlib.h
TestROM/C/cc65/linux/: ar65  ca65  cc65  cc65-nes_2.13.3-1_all.deb  cc65_2.13.3-1_amd64.deb  cc65_2.13.3-1_i386.deb  cl65  co65  da65  ld65  od65
Tools/iNesDPT/: CMakeLists.txt  main.c
Tools/iNesInfo/: CMakeLists.txt  main.c
Tools/iNesMk/: CMakeLists.txt  main.c
UnitTest/6502/: CMakeLists.txt  main.cpp  types.h  write-read.c
UnitTest/6502/6502sim/: 6502SIM.TXT  TEST.A65
UnitTest/6502/6502sim/ASM_TEST/: build.bat  ind.asm
UnitTest/6502/6502sim/ASM_TEST/add16/: add16.asm  build.bat
UnitTest/6502/6502sim/ASM_TEST/cond/: COND.asm  build.bat
UnitTest/6502/6502sim/ASM_TEST/shift/: shift.asm  shift.bat
UnitTest/6502/6502sim/ASM_TEST/sub16/: build.bat  sub16.asm
UnitTest/6502/6502sim/ASM_TEST/unorder list/: build.bat  unlist.asm
UnitTest/6502/M6502/: Codes.h  Debug.c  M6502.c  M6502.h
UnitTest/6502/P6502/: cycles.c  cycles.h  p6502.c  p6502.h
UnitTest/6502/X6502/: types.h  x6502.cpp  x6502.h  x6502struct.h
UnitTest/6502/instr_test-v4/: RE_01-basics.nes  RE_02-implied.nes  RE_03-immediate.nes  RE_04-zero_page.nes  RE_05-zp_xy.nes  RE_06-absolute.nes  RE_07-abs_xy.nes  RE_08-ind_x.nes  RE_09-ind_y.nes  RE_10-branches.nes  RE_11-stack.nes  RE_12-jmp_jsr.nes  RE_13-rts.nes  RE_14-rti.nes  RE_15-brk.nes  RE_16-special.nes
